--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed">
 
+  {% if jekyll.environment == "production" %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -35,4 +36,5 @@
     ga('send', 'pageview');
 
   </script>
+  {% endif %}
 </head>
