Add RSS icon, fix some validation issues with feed, add category to feed XML, separate feeds

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
+            <a href="{{ site.baseurl }}/feeds"><img src="{{ site.baseurl }}/public/images/icons/rss-feed.svg" alt="RSS Icon" style="height: 0.75em; float: right;"/></a>
           </h3>
         </div>
       </div>
