--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,10 @@
         }, false);
       })(document);
     </script>
+    <script>
+    (function() {
+      var bLazy = new Blazy();
+    })();
+</script>
   </body>
 </html>
