--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,6 @@
 
   </script>
   {% endif %}
+
+  <script src="https://cdn.jsdelivr.net/npm/blazy@1.8.2/blazy.min.js" integrity="sha256-D0J9D4igaYyVX/Y78Tr0yoDJsy8hi14hCEdFDakBp08=" crossorigin="anonymous"></script>
 </head>
