--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -2,8 +2,7 @@
 <figure>
     <a href="{{ full_url }}">
         <img
-          class="b-lazy"
-          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+          class="lozad"
           data-src="{{ full_url }}"
           alt="{% if include.alt == blank %}{{ include.caption }}{% else %}{{ include.alt }}{% endif %}" />
     </a>
