--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,8 @@
     </script>
     <script>
     (function() {
-      var bLazy = new Blazy();
+      const observer = lozad();
+      observer.observe();
     })();
 </script>
   </body>
