--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,5 +39,6 @@
   </script>
   {% endif %}
 
-  <script src="https://cdn.jsdelivr.net/npm/blazy@1.8.2/blazy.min.js" integrity="sha256-D0J9D4igaYyVX/Y78Tr0yoDJsy8hi14hCEdFDakBp08=" crossorigin="anonymous"></script>
+  <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lozad@1.4.0/dist/lozad.min.js" integrity="sha256-TMOFjIfo0l/RCQrl6kcyonBbAEgnFJfXlgC3z7SXKzM=" crossorigin="anonymous"></script>
 </head>
