--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   <!-- Icons -->
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "/feed" | relative_url }}" />
 
   {% if jekyll.environment == "production" %}
   <script>
